fdo#55432  fix the context menu position for RTL sheet

Change-Id: I023215646b9aeadb4909c9f90f84f9e8b0dbd173