sc/source/ui/view/gridwin.cxx
@@ -2995,6 +2995,9 @@ void ScGridWindow::Command( const CommandEvent& rCEvt )
         else if ( !bMouse )
         {
             //  non-edit menu by keyboard -> use lower right of cell cursor position
+            ScDocument* aDoc = pViewData->GetDocument();
+            SCTAB tabNo = pViewData->GetTabNo();
+            sal_Bool LayoutIsRTL = aDoc->IsLayoutRTL(tabNo);
 
             SCCOL nCurX = pViewData->GetCurX();
             SCROW nCurY = pViewData->GetCurY();
@@ -3002,8 +3005,9 @@ void ScGridWindow::Command( const CommandEvent& rCEvt )
             long nSizeXPix;
             long nSizeYPix;
             pViewData->GetMergeSizePixel( nCurX, nCurY, nSizeXPix, nSizeYPix );
-            aMenuPos.X() += nSizeXPix;
-            aMenuPos.Y() += nSizeYPix;
+            // fdo#55432 take the correct position for RTL sheet
+            aMenuPos.X() = LayoutIsRTL ?  aMenuPos.X() -= nSizeXPix : aMenuPos.X() += nSizeXPix;
+            aMenuPos.Y() +=  nSizeYPix;
 
             if (pViewData)
             {
